alb_app_deployment/app1Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
  labels:
    app: sub-app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sub-app1
  template:
    metadata:
      labels:
        app: sub-app1
    spec:
      containers:
        - name: my-app-container
          image: quanbb/alb-cpr-demo:1.0
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: sub-app1-svc
  labels:
    app: sub-app1
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /app1
spec:
  type: NodePort
  selector:
    app: sub-app1
  ports:
    - port: 80
      targetPort: 3000
