alb_app_deployment/app2Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
  labels:
    app: sub-app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sub-app2
  template:
    metadata:
      labels:
        app: sub-app2
    spec:
      containers:
        - name: my-app-container
          image: quanbb/alb-cpr-demo:2.0
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: sub-app2-svc
  labels:
    app: sub-app2
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /app2
spec:
  type: NodePort
  selector:
    app: sub-app2
  ports:
    - port: 80
      targetPort: 3000
